--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <nav>
     <ul>
       <li><a href="#" class="list">Home</a></li>
-      <li><a href="#" class="list">Introduction</a></li>
+      <li><a href="introduction.html" class="list">Introduction</a></li>
       <li><a href="#" class="list">Download</a></li>
       <li><a href="#" class="list">FAQ</a></li>
       <li><a href="#" class="list">Credits</a></li>
