--- a/introduction.html
+++ b/introduction.html
@@ -49,17 +49,17 @@
   </ul>
   <br />
   <h2>Screenshots</h2>
-  <img src="ss1.png" alt="Screenshot" id="ss" />
+  <img src="images/ss1.png" alt="Screenshot" id="ss" />
   <br />
-  <img src="ss2.png" alt="Screenshot" id="ss" />
+  <img src="images/ss2.png" alt="Screenshot" id="ss" />
   <br />
-  <img src="ss3.png" alt="Screenshot" id="ss" />
+  <img src="images/ss3.png" alt="Screenshot" id="ss" />
   <br />
-<img src="ss4.png" alt="Screenshot" id="ss" />
+<img src="images/ss4.png" alt="Screenshot" id="ss" />
   <br />
-  <img src="ss5.png" alt="Screenshot" id="ss" />
+  <img src="images/ss5.png" alt="Screenshot" id="ss" />
   <br />
-  <img src="ss6.png" alt="Screenshot" id="ss" />
+  <img src="images/ss6.png" alt="Screenshot" id="ss" />
   <br />
   <script src="script.js"></script>
 </body>
