--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
     <ul>
       <li><a href="#" class="list">Home</a></li>
       <li><a href="introduction.html" class="list">Introduction</a></li>
-      <li><a href="#" class="list">Download</a></li>
       <li><a href="#" class="list">FAQ</a></li>
       <li><a href="#" class="list">Credits</a></li>
     </ul>
   </nav>
   <img src="logo.jpg" />
   <h1>aShellYou</h1>
-  <h4>A beautiful local ADB shell specifically designed for Android devices powered by Shizuku.</h4>
+  <p></p>A beautiful local ADB shell specifically designed for Android devices powered by Shizuku.</p>
 
   <br />
 
@@ -31,8 +30,11 @@
   
   <ul>
      <li>An elegantly designed user interface with modern material you .</li>
+    <br />
     <li>Has both Shizuku(local ADB) and OTG ADB support.</li>
+    <br />
     <li>Included a bundle of examples about common ADB commands.</li>
+    <br />
     <li>Handles continuously running commands, such as logcat, top, etc.</li>
   </ol>
   
