--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>aShellYou</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="static/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -13,12 +13,12 @@
   <nav>
     <ul>
       <li><a href="#" class="list">Home</a></li>
-      <li><a href="introduction.html" class="list">Introduction</a></li>
+      <li><a href="static/introduction.html" class="list">Introduction</a></li>
       <li><a href="#" class="list">FAQ</a></li>
       <li><a href="#" class="list">Credits</a></li>
     </ul>
   </nav>
-  <img src="logo.jpg" />
+  <img src="static/logo.jpg" />
   <h1>aShellYou</h1>
   <p></p>A beautiful local ADB shell specifically designed for Android devices powered by Shizuku.</p>
 
@@ -38,7 +38,7 @@
     <li>Handles continuously running commands, such as logcat, top, etc.</li>
   </ol>
   
-  <script src="script.js"></script>
+  <script src="static/script.js"></script>
 </body>
 
 </html>
