--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
       <li><a href="#" class="list">Credits</a></li>
     </ul>
   </nav>
-  <img src="static/logo.jpg" />
+  <img src="images/logo.jpg" />
   <h1>aShellYou</h1>
   <p></p>A beautiful local ADB shell specifically designed for Android devices powered by Shizuku.</p>
 
