--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>aShellYou</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+
   <button id="hamburger">&#9776;</button>
   <nav>
     <ul>
@@ -20,7 +24,7 @@
   </nav>
   <img src="images/logo.jpg" />
   <h1>aShellYou</h1>
-  <p></p>A beautiful local ADB shell specifically designed for Android devices powered by Shizuku.</p>
+  <div>A beautiful local ADB shell specifically designed for Android devices powered by Shizuku.</div>
 
   <br />
 
@@ -36,7 +40,13 @@
     <li>Included a bundle of examples about common ADB commands.</li>
     <br />
     <li>Handles continuously running commands, such as logcat, top, etc.</li>
-  </ol>
+  </ul>
+<br>
+<br>
+  
+<h1>Download</h1>
+<a href="https://github.com/DP-Hridayan/aShellYou/releases/latest">
+  <img src="images/github.svg" alt="GitHub" id="github" />
   
   <script src="script.js"></script>
 </body>
