--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
   <button id="hamburger">&#9776;</button>
   <nav>
     <ul>
-      <li><a href="#" class="list">Home</a></li>
-      <li><a href="introduction.html" class="list">Introduction</a></li>
-      <li><a href="#" class="list">FAQ</a></li>
-      <li><a href="#" class="list">Credits</a></li>
+      <li><a href="index.html" class="list">Home</a></li>
+      <li><a href="introduction.html" class="list">Introduction</a>
+      <li><a href="credits.html" class="list">Credits</a></li>
     </ul>
   </nav>
   <img src="images/logo.jpg" />
