--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap" rel="stylesheet">
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="static/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -47,7 +47,7 @@
 <a href="https://github.com/DP-Hridayan/aShellYou/releases/latest">
   <img src="images/github.svg" alt="GitHub" id="github" />
   
-  <script src="script.js"></script>
+  <script src="static/script.js"></script>
 </body>
 
 </html>
