--- a/introduction.html
+++ b/introduction.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap" rel="stylesheet">
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="static/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -58,7 +58,7 @@
   <br />
   <img src="images/ss6.png" alt="Screenshot" id="ss" />
   <br />
-  <script src="script.js"></script>
+  <script src="static/script.js"></script>
 </body>
 
 </html> 
