--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
 <br>
   
 <h1>Download</h1>
-<a href="https://github.com/DP-Hridayan/aShellYou/releases/latest">
+<a href="https://apt.izzysoft.de/fdroid/index/apk/in.hridayan.ashell">
   <img src="images/github.svg" alt="GitHub" id="github" />
-  
+  <br>
+  <a href="https://github.com/DP-Hridayan/aShellYou/releases/latest">
+  <img src="images/fdroid.svg" alt="Github" id="fdroid" />
   <script src="static/script.js"></script>
 </body>
 
