--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <img src="images/github.svg" alt="GitHub" id="github" />
   <br>
   <a href="https://github.com/DP-Hridayan/aShellYou/releases/latest">
-  <img src="images/fdroid.svg" alt="Github" id="fdroid" />
+  <img src="images/fdroid.svg" alt="fdroid" id="fdroid" />
   <script src="static/script.js"></script>
 </body>
 
