--- a/credits.html
+++ b/credits.html
@@ -1,4 +1,45 @@
-it is under development
-jus wait for some time
+<!DOCTYPE html>
+<html>
 
-😊
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>aShellYou</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap" rel="stylesheet">
+  <link href="static/style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+
+  <button id="hamburger">&#9776;</button>
+  <nav>
+    <ul>
+      <li><a href="index.html" class="list">Home</a></li>
+      <li><a href="introduction.html" class="list">Introduction</a>
+      <li><a href="credits.html" class="list">Credits</a></li>
+    </ul>
+  </nav>
+
+<h1>Hridayan</h1>
+<img src="images/hridayan.jpg" alt="Profile Picture" id="photos" />
+<h3>Just a guy who love apps and design 🫠</h3>
+<a href="https://github.com/DP-Hridayan">
+  <img src="images/github.svg" alt="github" id="github" />
+</a>
+  
+
+
+<h1>Krishna</h1>
+<img src="images/krishna.jpg" alt="Profile Picture" id="photos" />
+<h3>Developer of this website ✌️</h3>
+<a href="https://github.com/Krishna-G-OP">
+  <img src="images/github.svg" alt="github" id="github" />
+</a>
+   
+  <script src="static/script.js"></script>
+</body>
+
+  </html>
+    
