--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>aShellYou</title>
+  <title>aShellYou - A Beautiful ADB Shell for Android Devices | YourWebsite</title> <!-- Optimized Title Element -->
+  <meta name="description" content="Discover aShellYou, a beautifully designed local ADB shell for Android devices powered by Shizuku. Explore its features and download it now."> <!-- Meta Description -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap" rel="stylesheet">
   <link href="static/style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -17,11 +18,11 @@
   <nav>
     <ul>
       <li><a href="index.html" class="list">Home</a></li>
-      <li><a href="introduction.html" class="list">Introduction</a>
+      <li><a href="introduction.html" class="list">Introduction</a></li> <!-- Added closing tag for <li> -->
       <li><a href="credits.html" class="list">Credits</a></li>
     </ul>
   </nav>
-  <img src="images/logo.jpg" />
+  <img src="images/logo.jpg" alt="aShellYou Logo"> <!-- Added alt attribute for accessibility -->
   <h1>aShellYou</h1>
   <div>A beautiful local ADB shell specifically designed for Android devices powered by Shizuku.</div>
 
@@ -32,7 +33,7 @@
   </h1>
   
   <ul>
-     <li>An elegantly designed user interface with modern material you .</li>
+    <li>An elegantly designed user interface with modern material you .</li> <!-- Not sure what "material you" refers to -->
     <br />
     <li>Has both Shizuku(local ADB) and OTG ADB support.</li>
     <br />
@@ -40,15 +41,17 @@
     <br />
     <li>Handles continuously running commands, such as logcat, top, etc.</li>
   </ul>
-<br>
-<br>
-  
-<h1>Download</h1>
-<a href="https://github.com/DP-Hridayan/aShellYou/releases/latest">
-  <img src="images/github.svg" alt="GitHub" id="github" />
   <br>
+  <br>
+  
+  <h1>Download</h1>
+  <a href="https://github.com/DP-Hridayan/aShellYou/releases/latest">
+    <img src="images/github.svg" alt="GitHub" id="github" />
+  </a> <!-- Added closing anchor tag -->
+  <br> <!-- Removed extra <br> -->
   <a href="https://apt.izzysoft.de/fdroid/index/apk/in.hridayan.ashell">
-  <img src="images/fdroid.svg" alt="fdroid" id="fdroid" />
+    <img src="images/fdroid.svg" alt="fdroid" id="fdroid" />
+  </a> <!-- Added closing anchor tag -->
   <script src="static/script.js"></script>
 </body>
 
