--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>aShellYou - A Beautiful ADB Shell for Android Devices | YourWebsite</title> <!-- Optimized Title Element -->
+  <title>aShellYou - A Beautiful ADB Shell for Android Devices | YourWebsite</title> 
+
+
   <meta name="description" content="Discover aShellYou, a beautifully designed local ADB shell for Android devices powered by Shizuku. Explore its features and download it now."> <!-- Meta Description -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,8 +49,8 @@
   <h1>Download</h1>
   <a href="https://github.com/DP-Hridayan/aShellYou/releases/latest">
     <img src="images/github.svg" alt="GitHub" id="github" />
-  </a> <!-- Added closing anchor tag -->
-  <br> <!-- Removed extra <br> -->
+  </a> 
+  <br> 
   <a href="https://apt.izzysoft.de/fdroid/index/apk/in.hridayan.ashell">
     <img src="images/fdroid.svg" alt="fdroid" id="fdroid" />
   </a> <!-- Added closing anchor tag -->
