--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>aShellYou - A Beautiful ADB Shell for Android Devices | YourWebsite</title> 
-
-
-  <meta name="description" content="Discover aShellYou, a beautifully designed local ADB shell for Android devices powered by Shizuku. Explore its features and download it now."> <!-- Meta Description -->
+  <title>aShellYou - A Beautiful ADB Shell for Android Devices | YourWebsite</title>
+  <meta name="description" content="Discover aShellYou, a beautifully designed local ADB shell for Android devices powered by Shizuku. Explore its features and download it now.">
+  <meta property="og:title" content="aShellYou - A Beautiful ADB Shell for Android Devices">
+  <meta property="og:description" content="Discover aShellYou, a beautifully designed local ADB shell for Android devices powered by Shizuku. Explore its features and download it now.">
+  <meta property="og:url" content="https://example.com/your-page.html">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="aShellYou - A Beautiful ADB Shell for Android Devices">
+  <meta name="twitter:description" content="Discover aShellYou, a beautifully designed local ADB shell for Android devices powered by Shizuku. Explore its features and download it now.">
+  <meta name="twitter:image" content="https://example.com/your-image.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap" rel="stylesheet">
@@ -15,29 +20,22 @@
 </head>
 
 <body>
-
   <button id="hamburger">&#9776;</button>
   <nav>
     <ul>
       <li><a href="index.html" class="list">Home</a></li>
-      <li><a href="introduction.html" class="list">Introduction</a></li> <!-- Added closing tag for <li> -->
+      <li><a href="introduction.html" class="list">Introduction</a></li>
       <li><a href="credits.html" class="list">Credits</a></li>
     </ul>
   </nav>
-  <img src="images/logo.jpg" alt="aShellYou Logo"> <!-- Added alt attribute for accessibility -->
   <h1>aShellYou</h1>
   <div>A beautiful local ADB shell specifically designed for Android devices powered by Shizuku.</div>
-
   <br />
-
-  <h1>
-     Features
-  </h1>
-  
+  <h1>Features</h1>
   <ul>
-    <li>An elegantly designed user interface with modern material you .</li> <!-- Not sure what "material you" refers to -->
+    <li>An elegantly designed user interface with modern material.</li>
     <br />
-    <li>Has both Shizuku(local ADB) and OTG ADB support.</li>
+    <li>Has both Shizuku (local ADB) and OTG ADB support.</li>
     <br />
     <li>Included a bundle of examples about common ADB commands.</li>
     <br />
@@ -45,15 +43,10 @@
   </ul>
   <br>
   <br>
-  
   <h1>Download</h1>
-  <a href="https://github.com/DP-Hridayan/aShellYou/releases/latest">
-    <img src="images/github.svg" alt="GitHub" id="github" />
-  </a> 
-  <br> 
-  <a href="https://apt.izzysoft.de/fdroid/index/apk/in.hridayan.ashell">
-    <img src="images/fdroid.svg" alt="fdroid" id="fdroid" />
-  </a> <!-- Added closing anchor tag -->
+  <a href="https://github.com/DP-Hridayan/aShellYou/releases/latest">GitHub</a>
+  <br>
+  <a href="https://apt.izzysoft.de/fdroid/index/apk/in.hridayan.ashell">F-Droid</a>
   <script src="static/script.js"></script>
 </body>
 
