--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </ul>
   </nav>
   <h1>aShellYou</h1>
+  <img src="images/logo.jpg" alt="aShellYou Logo">
   <div>A beautiful local ADB shell specifically designed for Android devices powered by Shizuku.</div>
   <br />
   <h1>Features</h1>
@@ -44,9 +45,13 @@
   <br>
   <br>
   <h1>Download</h1>
-  <a href="https://github.com/DP-Hridayan/aShellYou/releases/latest">GitHub</a>
+  <a href="https://github.com/DP-Hridayan/aShellYou/releases/latest">
+    <img src="images/github.svg" alt="GitHub" id="github" />
+  </a>
   <br>
-  <a href="https://apt.izzysoft.de/fdroid/index/apk/in.hridayan.ashell">F-Droid</a>
+  <a href="https://apt.izzysoft.de/fdroid/index/apk/in.hridayan.ashell">
+    <img src="images/fdroid.svg" alt="fdroid" id="fdroid" />
+  </a>
   <script src="static/script.js"></script>
 </body>
 
