--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
   <a href="https://apt.izzysoft.de/fdroid/index/apk/in.hridayan.ashell">
     <img src="images/fdroid.svg" alt="fdroid" id="fdroid">
   </a>
-  <script src="static/script.js"></script>
+  <script src="static/script.ts"></script>
 </body>
 </html>
