--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Open Graph for Social Sharing -->
     <meta property="og:title" content="aShell - Powerful ADB Commands for Android" />
     <meta property="og:description" content="Download aShell to execute ADB commands directly on your Android device. Perfect for developers and power users." />
-    <meta property="og:image" content="https://raw.githubusercontent.com/DP-Hridayan/aShellYou/7ae22faf02f97b37a9c8ec53d7cd7325b6611372/assets/mockups.svg" />
+    <meta property="og:image" content="https://github.com/KrishnaSSH/ashellyou-website/raw/main/src/assets/banner.png">
     <meta property="og:url" content="https://ashell.vercel.com" />
     <meta property="og:type" content="website" />
     
