--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
 
 
+    <meta name="google-site-verification" content="MdsKRdPUs03lMlVcNU_zrju8dP1RlTEzsgW6RYvAAU0" />
+
+    
     <!-- Favicon -->
     <link rel="icon" href="/src/assets/logo.ico" type="image/x-icon" />
     
